# eps-idf-pure-cmake

./: CMakeLists.txt  build.sh  main.c
